--- a/sass/components/hero.scss
+++ b/sass/components/hero.scss
@@ -1,88 +1,5 @@
 @use '../abstracts' as *;
 
-.main-hero {
-    height: rem(843px);
-    padding: 0 rem(10px);
-    overflow: hidden;
-    background-color: $peach;
-    position: relative;
-    z-index: 1;
-    background-image: url(../assets/home/desktop/bg-pattern-hero-home.svg);
-    background-repeat: no-repeat;
-    background-position: top rem(104px) right rem(-300px);
-    @include mq(medium) {
-        border-radius:  rem(15px);
-        background-position: top rem(120px) right rem(-120px);
-    }
-    @include mq(large) {
-        display: flex;
-        height: rem(640px);
-        padding: 0;
-        background-position: top right;
-    }
-    &__content {
-        margin: 0 auto;
-        max-width: rem(327px);
-        position: relative;
-        z-index: 3;
-        @extend %flex;
-        @extend %flex-d-c;
-        @extend %flex-ai-c;
-        @include mq(medium) {
-            max-width: rem(575px);
-        }
-        @include mq(large) {
-            max-width: rem(540px);
-            height: rem(350px);
-            margin: rem(145px) 0 0 rem(95px);
-            align-items: flex-start;
-            justify-content: space-between;
-        }
-    }
-    &__header {
-        padding-top:    rem(80px);
-        padding-bottom: rem(28px);
-        @include mq(large) {
-            padding: 0;
-            text-align: left;
-        }
-    }
-    &__text{
-        color: $white;
-        font-weight: 400;
-        font-size: rem(15px);
-        line-height: rem(25px);
-        margin-bottom: rem(24px);
-        @include mq(medium) {
-            max-width: rem(445px);
-        }
-        @include mq(large) {
-            text-align: left;
-            margin-bottom: 0;
-        }
-    }
-    &__image {
-        margin: auto;
-        padding-top: rem(670px);
-        position: absolute;
-        z-index: 2;
-        top:    -9999px;
-        left:   -9999px;
-        right:  -9999px;
-        bottom: -9999px;
-        @include mq(medium) {
-            padding-top: rem(655px);
-            
-        }
-        @include mq(large) {
-            margin-top:   rem(-40px);
-            margin-right: rem(-75px);
-            padding-top: 0;
-            position: static;
-        }
-    }
-}
-
 .hero-wrapper {
     margin: 0 auto;
     @include mq(medium) {
